// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults functional tests can display a message if there are no results 1`] = `
<div
  className="search-results"
>
  <div
    className="twelve-col no-results-container last-col"
  >
    <h1
      className="row-title"
    >
      Your search for 
      <strong>
        spinach
      </strong>
       
      returned 0 results
    </h1>
    <p>
      Try a more specific or different query, try other keywords or learn how to
       
      <a
        href="http://jujucharms.com/docs/authors-charm-writing"
      >
        create your own solution
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`SearchResults functional tests can display a message if there is a loading error 1`] = `
<div
  className="search-results"
>
  <div
    className="twelve-col no-results-container last-col"
  >
    <h1
      className="row-title"
    >
      Something went wrong
    </h1>
    <p>
      For some reason the search failed. You could try searching at
       
      <a
        href="http://jujucharms.com/store"
      >
        http://jujucharms.com
      </a>
       
      or go
       
      <span
        className="link"
        onClick={[Function]}
      >
        back
      </span>
      .
    </p>
  </div>
</div>
`;

exports[`SearchResults functional tests can render the promulgated search results 1`] = `
<div
  className="search-results"
>
  <div
    className="row no-padding-top"
  >
    <div
      className="inner-wrapper list-block"
    >
      <div
        className="twelve-col list-block__title no-margin-bottom"
      >
        Your search for ‘
        spinach
        ’ returned 
        4
         
        results.
      </div>
      <div
        className="list-block__filters"
      >
        <SearchResultsTypeFilter
          analytics={
            Object {
              "addCategory": [Function],
              "sendEvent": [Function],
            }
          }
          changeState={[Function]}
          currentType="charm"
        />
        <div
          className="six-col last-col"
        >
          <div
            className="list-block__filters--selects"
          >
            <form>
              <SearchResultsSelectFilter
                analytics={
                  Object {
                    "addCategory": [Function],
                    "sendEvent": [Function],
                  }
                }
                changeState={[Function]}
                currentValue="-name"
                filter="sort"
                items={
                  Array [
                    Object {
                      "label": "Default",
                      "value": "",
                    },
                    Object {
                      "label": "Most popular",
                      "value": "-downloads",
                    },
                    Object {
                      "label": "Least popular",
                      "value": "downloads",
                    },
                    Object {
                      "label": "Name (a-z)",
                      "value": "name",
                    },
                    Object {
                      "label": "Name (z-a)",
                      "value": "-name",
                    },
                    Object {
                      "label": "Author (a-z)",
                      "value": "owner",
                    },
                    Object {
                      "label": "Author (z-a)",
                      "value": "-owner",
                    },
                  ]
                }
                label="Sort by"
              />
              <SearchResultsSelectFilter
                analytics={
                  Object {
                    "addCategory": [Function],
                    "sendEvent": [Function],
                  }
                }
                changeState={[Function]}
                currentValue="wily"
                filter="series"
                items={
                  Array [
                    Object {
                      "label": "All",
                      "value": "",
                    },
                    Object {
                      "label": "Kubernetes",
                      "value": "kubernetes",
                    },
                    Object {
                      "label": "Xenial 16.04",
                      "value": "xenial",
                    },
                    Object {
                      "label": "Bionic 18.04",
                      "value": "bionic",
                    },
                    Object {
                      "label": "Cosmic 18.10",
                      "value": "cosmic",
                    },
                    Object {
                      "label": "Trusty 14.04",
                      "value": "trusty",
                    },
                    Object {
                      "label": "CentOS 7",
                      "value": "centos7",
                    },
                    Object {
                      "label": "Windows",
                      "value": "win2016",
                    },
                  ]
                }
                label="Series"
              />
            </form>
          </div>
        </div>
      </div>
      <div
        className="entity-search-results"
      >
        <div>
          <div
            className="clearfix promulgated-results"
          >
            <h4>
              Recommended 
              <span
                className="count"
              >
                (
                2
                )
              </span>
            </h4>
            <ul
              className="list-block__list"
            >
              <SearchResultsItem
                acl={
                  Object {
                    "isReadOnly": [Function],
                  }
                }
                addToModel={[Function]}
                analytics={
                  Object {
                    "addCategory": [Function],
                    "sendEvent": [Function],
                  }
                }
                changeState={[Function]}
                generatePath={[Function]}
                item={
                  Object {
                    "displayName": "mysql-one",
                    "downloads": 1000,
                    "id": "mysql-one",
                    "name": "mysql-one",
                    "owner": "test-owner",
                    "promulgated": true,
                    "series": Array [],
                    "storeId": "~test-owner/mysql-one",
                    "type": "charm",
                    "url": "http://example.com/mysql-one",
                  }
                }
                key="~test-owner/mysql-one0"
              />
              <SearchResultsItem
                acl={
                  Object {
                    "isReadOnly": [Function],
                  }
                }
                addToModel={[Function]}
                analytics={
                  Object {
                    "addCategory": [Function],
                    "sendEvent": [Function],
                  }
                }
                changeState={[Function]}
                generatePath={[Function]}
                item={
                  Object {
                    "displayName": "mysql-two",
                    "downloads": 1000,
                    "id": "mysql-two",
                    "name": "mysql-two",
                    "owner": "test-owner",
                    "promulgated": true,
                    "series": Array [],
                    "storeId": "~test-owner/mysql-two",
                    "type": "charm",
                    "url": "http://example.com/mysql-two",
                  }
                }
                key="~test-owner/mysql-two1"
              />
            </ul>
          </div>
          <div
            className="clearfix community-results"
          >
            <div
              className="button-wrapper--ruled v1"
            >
              <Button
                action={[Function]}
                extraClasses="is-inline show-community-button"
                modifier="neutral"
              >
                Show 2 community results
              </Button>
            </div>
            <div
              className="clearfix community-results__content hidden"
            >
              <h4>
                Community 
                <span
                  className="count"
                >
                  (
                  2
                  )
                </span>
              </h4>
              <ul
                className="list-block__list"
              >
                <SearchResultsItem
                  acl={
                    Object {
                      "isReadOnly": [Function],
                    }
                  }
                  addToModel={[Function]}
                  analytics={
                    Object {
                      "addCategory": [Function],
                      "sendEvent": [Function],
                    }
                  }
                  changeState={[Function]}
                  generatePath={[Function]}
                  item={
                    Object {
                      "displayName": "mysql-three",
                      "downloads": 1000,
                      "id": "mysql-three",
                      "name": "mysql-three",
                      "owner": "test-owner",
                      "promulgated": false,
                      "series": Array [],
                      "storeId": "~test-owner/mysql-three",
                      "type": "charm",
                      "url": "http://example.com/mysql-three",
                    }
                  }
                  key="~test-owner/mysql-three0"
                />
                <SearchResultsItem
                  acl={
                    Object {
                      "isReadOnly": [Function],
                    }
                  }
                  addToModel={[Function]}
                  analytics={
                    Object {
                      "addCategory": [Function],
                      "sendEvent": [Function],
                    }
                  }
                  changeState={[Function]}
                  generatePath={[Function]}
                  item={
                    Object {
                      "displayName": "mysql-four",
                      "downloads": 1000,
                      "id": "mysql-four",
                      "name": "mysql-four",
                      "owner": "test-owner",
                      "promulgated": false,
                      "series": Array [],
                      "storeId": "~test-owner/mysql-four",
                      "type": "charm",
                      "url": "http://example.com/mysql-four",
                    }
                  }
                  key="~test-owner/mysql-four1"
                />
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
